tests/fixtures/invalid/max_none.py
# Cannot call max() with None
x = max(None)
